force-app/main/default/objects/Partner_Agreement__c.object
<CustomObject>
    <description>Account child object to track agreements and quotas of a partner account</description>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <defaultValue>&apos;Exchange&apos;</defaultValue>
        <label>Contact Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agent</fullName>
                </value>
                <value>
                    <fullName>Exchange</fullName>
                </value>
                <value>
                    <fullName>Study Abroad</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                    <isActive>false</isActive>
                    <label>Provider</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Degree_Type__c</fullName>
        <label>Degree Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Undergraduate</fullName>
                </value>
                <value>
                    <fullName>Postgraduate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Faculty_Department_Involved__c</fullName>
        <description>Field to be used in the future, when moving to a model where the partner&apos;s faculties are to be merged on a single account. Move the Account&apos;s Faculty / Department Involved field to this field. And then reparent the partner agreement record to the university wide account.</description>
        <label>Faculty / Department Involved</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inbound_Balance__c</fullName>
        <label>Inbound Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outbound_Balance__c</fullName>
        <label>Outbound Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Agreements</relationshipLabel>
        <relationshipName>Partner_Agreements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quota__c</fullName>
        <label>Quota</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_Quota__c</fullName>
        <description>Remaining quota after deducting the number of applications from Quota field.</description>
        <label>Remaining Quota</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&apos;Active&apos;</defaultValue>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Study_Type_Supported__c</fullName>
        <defaultValue>&apos;Exchange&apos;</defaultValue>
        <description>Study types supported on the Partner Agreement.</description>
        <label>Study Type Supported</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Exchange</fullName>
                </value>
                <value>
                    <fullName>Study Abroad</fullName>
                </value>
                <value>
                    <fullName>Agent</fullName>
                    <isActive>false</isActive>
                    <label>Agent</label>
                </value>
                <value>
                    <fullName>Provider</fullName>
                    <isActive>false</isActive>
                    <label>Provider</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suggested_Balance_Semester_1__c</fullName>
        <label>Quota - Semester 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Suggested_Balance_Semester_2__c</fullName>
        <label>Quota - Semester 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Partner Agreement</label>
    <nameField>
        <displayFormat>PA-{000000}</displayFormat>
        <label>Partner Agreement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Agreements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>